--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <body>
         <img src="img/success-img.png" alt="" class="image" />
         <h1 class="title">Thank You!</h1>
-        <p class="text">Дякуємо за вашу зацікавленість!<br />Перевірте свою електронну пошту, щоб отримати посилання на перше заняття.</p>
+        <p class="text">
+            Дякуємо за вашу зацікавленість! <br />
+            Перевірте свою електронну пошту, щоб отримати посилання на перше заняття.
+        </p>
         <a href="#" class="btn">Перейти на головну</a>
     </body>
 </html>
