--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
 
     <body>
-        <img src="img/success-img.png" alt="" class="image" />
+        <img width="256" height="324" src="img/success-img.png" alt="" class="image" />
         <h1 class="title">Thank You!</h1>
         <p class="text">
             Дякуємо за вашу зацікавленість! <br />
